--- a/src/package.json
+++ b/src/package.json
@@ -13,7 +13,9 @@
   ],
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "chalk": "^2.4.1"
+  },
   "devDependencies": {
     "babel-eslint": "^8.2.6",
     "eslint": "^5.3.0",
