--- a/src/package.json
+++ b/src/package.json
@@ -1,8 +1,11 @@
 {
   "name": "src",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "静态资源服务器",
-  "main": "index.js",
+  "main": "src/app.js",
+  "bin":{
+    "StaticServer":"bin/StaticServer"
+  },
   "scripts": {
     "lint": "eslint .",
     "fix": "eslint --fix ."
@@ -14,7 +17,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^2.4.1"
+    "chalk": "^2.4.1",
+    "handlebars": "^4.0.11",
+    "yargs": "^12.0.1"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.6",
